--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="header">
   <h1>
-    Basic Angular App
+    User Management UI
   </h1>
 </div>
 <div class="content">
   <p>
-    Welcome to the basic angular app!
+    Welcome to the user management UI!
   </p>
 </div>
