cleanup info and footer

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -41,6 +41,10 @@
       </tr>
     </tbody>
   </table>
+  <app-actuator-report
+  [serviceUrl]="basicExpressServiceUrl"
+  [serviceName]="'Basic Express Service'"
+></app-actuator-report>
 </div>
 
 <ng-template #loading>
