--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,3 @@
 <hr />
 <p>© Adam on the Internet {{ year }}</p>
-<p>
-  <a href="http://adamontheinternet.com" target="_blank"
-    >AdamOnTheInternet.com</a
-  >
-</p>
-<a target="_blank" href="https://github.com/upandatom96/user-management-ui">
-  Check out this app on GitHub
-</a>
+<p (click)="goToInfo()">More info</p>
