--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -13,8 +13,10 @@
       https://github.com/upandatom96/user-management-ui</a
     >.
   </p>
-  <app-actuator-report
-    [serviceUrl]="basicExpressServiceUrl"
-    [serviceName]="'Basic Express Service'"
-  ></app-actuator-report>
+  <p>
+    Find more projects at
+    <a href="http://adamontheinternet.com" target="_blank"
+      >AdamOnTheInternet.com</a
+    >.
+  </p>
 </div>
