--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <p>
-  <span (click)="goToDashboard()" id="app-title">user-management-ui</span> //
+  <span (click)="goToDashboard()" id="app-title">User Management</span> //
   <ng-container *ngIf="isLoggedIn">
     <span (click)="logout()">logout</span> //
     <span (click)="goToProfile()">Hello, {{ userEmail }}</span> //
