--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,16 @@
-<hr />
-<p>© Adam on the Internet {{ year }}</p>
-<p (click)="goToInfo()">More info</p>
+<section id="footer-section" class="mt-3">
+  <footer class="text-center">
+    <div class="container">
+      <div class="row pt-3">
+        <div class="col-md-12">
+          <p>© Adam on the Internet {{ year }}</p>
+          <p>
+            <a (click)="goToInfo()">
+              More info
+            </a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+</section>
