--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,24 @@
-<div class="header">
-  <h1>
-    User Management UI
-  </h1>
+<div class="jumbotron jumbotron-fluid py-4 mb-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>
+          User Management
+        </h1>
+        <p>
+          for Adam on the Internet Applications
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="content">
-  <p>
-    Welcome to the user management UI!
-  </p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 my-3">
+      <p>
+        Welcome to the user management UI!
+      </p>
+    </div>
+  </div>
 </div>
