--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,22 +1,33 @@
-<div class="header">
-  <h1>
-    Info
-  </h1>
+<div class="jumbotron jumbotron-fluid py-4 mb-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>
+          Application Information
+        </h1>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="content">
-  <p>
-    This is a user management.
-  </p>
-  <p>
-    This repo for this project can be found on github at
-    <a target="_blank" href="https://github.com/upandatom96/user-management-ui">
-      https://github.com/upandatom96/user-management-ui</a
-    >.
-  </p>
-  <p>
-    Find more projects at
-    <a href="http://adamontheinternet.com" target="_blank"
-      >AdamOnTheInternet.com</a
-    >.
-  </p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 my-3">
+      <p>
+        This is a user management.
+      </p>
+      <p>
+        This repo for this project can be found on github at
+        <a target="_blank" href="https://github.com/upandatom96/user-management-ui">
+          https://github.com/upandatom96/user-management-ui</a
+        >.
+      </p>
+      <p>
+        Find more projects at
+        <a href="http://adamontheinternet.com" target="_blank"
+          >AdamOnTheInternet.com</a
+        >.
+      </p>
+    </div>
+  </div>
 </div>
