--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,31 +1,46 @@
-<div class="header">
-  <h1>
-    Your Profile
-  </h1>
+<div class="jumbotron jumbotron-fluid py-4 mb-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>
+          Your Profile
+        </h1>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="content">
-  <p>
-    <strong>
-      email:
-    </strong>
-    {{ email }}
-  </p>
-  <p>
-    <strong>
-      admin:
-    </strong>
-    {{ admin }}
-  </p>
-  <p>
-    <strong>
-      special access:
-    </strong>
-    {{ specialAccess }}
-  </p>
-  <p>
-    <button (click)="editEmail()">Edit your email</button>
-  </p>
-  <p>
-    <button (click)="editPassword()">Edit your password</button>
-  </p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 my-3">
+      <p>
+        <strong>
+          email:
+        </strong>
+        {{ email }}
+      </p>
+      <p>
+        <strong>
+          admin:
+        </strong>
+        {{ admin }}
+      </p>
+      <p>
+        <strong>
+          special access:
+        </strong>
+        {{ specialAccess }}
+      </p>
+      <p>
+        <button class="btn btn-secondary" (click)="editEmail()">
+          Edit your email
+        </button>
+      </p>
+      <p>
+        <button class="btn btn-secondary" (click)="editPassword()">
+          Edit your password
+        </button>
+      </p>
+    </div>
+  </div>
 </div>
