--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,50 +1,64 @@
-<div class="header">
-  <h1>
-    Admin Panel
-  </h1>
+<div class="jumbotron jumbotron-fluid py-4 mb-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>
+          Admin Panel
+        </h1>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="content">
-  <table *ngIf="ready; else loading">
-    <thead>
-      <tr>
-        <th>Email</th>
-        <th>Admin</th>
-        <th>Toggle Admin</th>
-        <th>Special Access</th>
-        <th>Edit Access</th>
-        <th>Delete</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.email }}</td>
-        <td>{{ user.admin }}</td>
-        <td>
-          <button (click)="toggleAdmin(user)">
-            <span *ngIf="user.admin">
-              Remove admin rights
-            </span>
-            <span *ngIf="!user.admin">
-              Add admin rights
-            </span>
-          </button>
-        </td>
-        <td>{{ user.specialAccess }}</td>
-        <td>
-          <button (click)="setSpecialAccess(user)">Edit access</button>
-        </td>
-        <td>
-          <button (click)="deleteUser(user)">
-            Delete
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <app-actuator-report
-  [serviceUrl]="basicExpressServiceUrl"
-  [serviceName]="'Basic Express Service'"
-></app-actuator-report>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 my-3">
+      <ng-container *ngIf="ready; else loading">
+        <table>
+          <thead>
+            <tr>
+              <th>Email</th>
+              <th>Admin</th>
+              <th>Toggle Admin</th>
+              <th>Special Access</th>
+              <th>Edit Access</th>
+              <th>Delete</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let user of users">
+              <td>{{ user.email }}</td>
+              <td>{{ user.admin }}</td>
+              <td>
+                <button (click)="toggleAdmin(user)">
+                  <span *ngIf="user.admin">
+                    Remove admin rights
+                  </span>
+                  <span *ngIf="!user.admin">
+                    Add admin rights
+                  </span>
+                </button>
+              </td>
+              <td>{{ user.specialAccess }}</td>
+              <td>
+                <button (click)="setSpecialAccess(user)">Edit access</button>
+              </td>
+              <td>
+                <button (click)="deleteUser(user)">
+                  Delete
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </ng-container>
+      <hr />
+      <app-actuator-report
+        [serviceUrl]="basicExpressServiceUrl"
+        [serviceName]="'Basic Express Service'"
+      ></app-actuator-report>
+    </div>
+  </div>
 </div>
 
 <ng-template #loading>
