--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -14,6 +14,11 @@
   <div class="row">
     <div class="col-md-12 my-3">
       <ng-container *ngIf="ready; else loading">
+        <p>
+          <button class="btn btn-secondary" (click)="addUser()">
+            Add User
+          </button>
+        </p>
         <table>
           <thead>
             <tr>
