--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -14,7 +14,7 @@
   <div class="row">
     <div class="col-md-12 my-3">
       <div *ngIf="ready; else loading">
-        <p>User: {{ userId }}</p>
+        <p>User: {{ user._id }}</p>
       </div>
     </div>
   </div>
