add icons to admin

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -57,11 +57,13 @@
               </td>
               <td>
                 <button class="btn btn-secondary" (click)="editUser(user)">
+                  <i class="fa fa-pencil"></i>
                   Edit
                 </button>
               </td>
               <td>
                 <button class="btn btn-secondary" (click)="deleteUser(user)">
+                  <i class="fa fa-trash"></i>
                   Delete
                 </button>
               </td>
