--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -12,7 +12,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-12 my-3">
+    <div class="col-md-6 my-3">
       <p>
         <strong>
           email:
@@ -31,6 +31,8 @@
         </strong>
         {{ specialAccess }}
       </p>
+    </div>
+    <div class="col-md-6 my-3">
       <p>
         <button class="btn btn-secondary" (click)="editEmail()">
           Edit your email
