start edit email password self

--- a/src/app/components/profile-edit-password/profile-edit-password.component.html
+++ b/src/app/components/profile-edit-password/profile-edit-password.component.html
@@ -1,1 +1,54 @@
-<p>profile-edit-password works!</p>
+<div class="jumbotron jumbotron-fluid py-4 mb-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>
+          Edit Password
+        </h1>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 my-3">
+      <form>
+        <section id="password">
+          New Password:
+          <br />
+          <input
+            type="password"
+            name="password"
+            [(ngModel)]="password"
+          /><br /><br />
+        </section>
+        <section id="confirmPassword">
+          Confirm Password:
+          <br />
+          <input
+            type="password"
+            name="confirmPassword"
+            [(ngModel)]="confirmPassword"
+          /><br /><br />
+        </section>
+        <div class="alert alert-danger" *ngIf="resetFailure">
+          <p>
+            Failed to update password.
+          </p>
+        </div>
+        <div class="alert alert-warning" *ngIf="showErrors && !valid">
+          <p>Please correct the following errors:</p>
+          <ul>
+            <li *ngFor="let error of errors">
+              {{ error }}
+            </li>
+          </ul>
+        </div>
+        <button class="btn btn-primary" (click)="submit()">
+          Update password
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
