--- a/src/app/components/profile-edit-email/profile-edit-email.component.html
+++ b/src/app/components/profile-edit-email/profile-edit-email.component.html
@@ -1,1 +1,41 @@
-<p>profile-edit-email works!</p>
+<div class="jumbotron jumbotron-fluid py-4 mb-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>
+          Edit Email
+        </h1>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 my-3">
+      <form>
+        <section id="email">
+          New Email:
+          <br />
+          <input type="text" name="email" [(ngModel)]="email" /><br /><br />
+        </section>
+        <div class="alert alert-danger" *ngIf="resetFailure">
+          <p>
+            Failed to update email.
+          </p>
+        </div>
+        <div class="alert alert-warning" *ngIf="showErrors && !valid">
+          <p>Please correct the following errors:</p>
+          <ul>
+            <li *ngFor="let error of errors">
+              {{ error }}
+            </li>
+          </ul>
+        </div>
+        <button class="btn btn-primary" (click)="submit()">
+          Update email
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
