--- a/src/app/components/profile-edit-email/profile-edit-email.component.html
+++ b/src/app/components/profile-edit-email/profile-edit-email.component.html
@@ -13,6 +13,9 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 my-3">
+      <div class="alert alert-info">
+        <p>NOTE: to see the change, you must log out and log back in</p>
+      </div>
       <form>
         <section id="email">
           New Email:
