--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -23,6 +23,11 @@
           Check services
         </button>
       </p>
+      <p>
+        <button class="btn btn-secondary btn-block" (click)="goLogs()">
+          Check logs
+        </button>
+      </p>
     </div>
   </div>
 </div>
