--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
+    <div class="navbar-nav ml-auto">
       <ng-container *ngIf="isLoggedIn">
         <a class="nav-item nav-link" (click)="goToProfile()">Your Profile</a>
         <a class="nav-item nav-link" (click)="goToAdmin()" *ngIf="isAdmin"
