--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,6 +3,15 @@
     <div class="container">
       <div class="row pt-3">
         <div class="col-md-12">
+          <p class="mb-2">
+            <a
+              class="text-white"
+              href="https://adam-on-the-internet.herokuapp.com/contact"
+              target="_blank"
+            >
+              Contact
+            </a>
+          </p>
           <p>© Adam on the Internet {{ year }}</p>
           <p>
             <a (click)="goToInfo()">
