--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,25 +1,44 @@
-<section id="footer-section" class="mt-3">
-  <footer class="text-center">
-    <div class="container">
-      <div class="row pt-3">
-        <div class="col-md-12">
-          <p class="mb-2">
-            <a
-              class="text-white"
-              href="https://adam-on-the-internet.herokuapp.com/contact"
-              target="_blank"
-            >
-              Contact
-            </a>
-          </p>
-          <p>© Adam on the Internet {{ year }}</p>
-          <p>
-            <a (click)="goToInfo()">
-              More info
-            </a>
-          </p>
-        </div>
-      </div>
+<div id="footer-section">
+  <div class="row">
+    <div class="col-md-12 my-3 text-center">
+      <p class="my-0">
+        <a
+          class="btn btn-link"
+          href="https://github.com/adam-on-the-internet"
+          target="_blank"
+        >
+          <i class="fa fa-github fa-2x"></i>
+        </a>
+        <a
+          class="btn btn-link"
+          href="https://www.linkedin.com/in/adam-callanan-49114b119"
+          target="_blank"
+        >
+          <i class="fa fa-linkedin-square fa-2x"></i>
+        </a>
+        <a
+          class="btn btn-link"
+          href="https://twitter.com/adam_on_the_net"
+          target="_blank"
+        >
+          <i class="fa fa-twitter fa-2x"></i>
+        </a>
+        <a
+          class="btn btn-link"
+          href="http://www.adamontheinternet.com/contact"
+          target="_blank"
+        >
+          <i class="fa fa-envelope fa-2x"></i>
+        </a>
+      </p>
+      <p class="my-0">
+        <a
+          href="http://www.adamontheinternet.com"
+          target="_blank"
+        >
+          © Adam on the Internet {{ year }}
+        </a>
+      </p>
     </div>
-  </footer>
-</section>
+  </div>
+</div>
